@@ -1,3 +1,3 @@
 SET CLEARDB_DATABASE_URL=mysql://kits-team:Alma1234@localhost:3306/kits-team?autoReconnect=true&useSSL=false
 SET PORT=6666
-java -jar target/app.jar
+java -jar --enable-preview target/app.jar
